fix to finished to karir page

--- a/src/app/modules/karir/karir.component.html
+++ b/src/app/modules/karir/karir.component.html
@@ -1,1 +1,26 @@
-<p>karir works!</p>
+<app-header-home />
+
+
+    <div ngClass="container">
+         <form ngClass="row mt-5">
+            <div ngClass="col-sm-12 col-md-3">
+                <label ngClass="mb-0">
+                    Departement
+                 </label><br>
+                 <input ngClass="form-control w-100">     
+            </div>
+
+            <div ngClass="col-sm-12 col-md-6">
+                <label ngClass="mb-0">
+                    Position
+                 </label><br>
+                 <input ngClass="form-control w-100">
+            </div>
+        
+            <button class="col-sm-12 col-md-3 btn bg-green-black text-white mt-4">Cari</button>
+         </form>
+
+         <app-empty/>
+    </div>
+    
+<app-footer-home />
